[project]
name = "mcptutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ben05allen", email = "ben05allen@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.7.1",
]

[project.scripts]
mcptutorial = "mcptutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
